--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -38,7 +38,7 @@
                 android:gravity="center">
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/btnCreate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/main_menu_btn_margin"
@@ -47,7 +47,7 @@
                     android:text="@string/create" />
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/btnList"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/main_menu_btn_margin"
@@ -62,7 +62,7 @@
                 android:gravity="center">
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/btnUpdate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/main_menu_btn_margin"
@@ -71,7 +71,7 @@
                     android:text="@string/update" />
 
                 <Button
-                    android:id="@+id/button4"
+                    android:id="@+id/btnDelete"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/main_menu_btn_margin"
