--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -3,4 +3,5 @@
     <dimen name="fontsize">20dp</dimen>
     <dimen name="form_margin">10dp</dimen>
     <dimen name="main_menu_btn_margin">5dp</dimen>
+    <dimen name="fragment_padding">10dp</dimen>
 </resources>
