add product list and product detail

--- a/app/src/main/res/layout/fragment_create_view.xml
+++ b/app/src/main/res/layout/fragment_create_view.xml
@@ -32,7 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="text" />
+                android:inputType="number" />
 
             <TextView
                 android:id="@+id/textView7"
@@ -58,7 +58,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="text" />
+                android:inputType="text|textMultiLine" />
 
             <TextView
                 android:id="@+id/textView9"
